--- a/main-hallway.html
+++ b/main-hallway.html
@@ -9,23 +9,28 @@
       margin: 0;
       display: flex;
       font-family: Arial, sans-serif;
-      background-color: #e6f2ff; /* Light pearly blue */
+      background-color: #e6f2ff;
       height: 100vh;
       overflow: hidden;
     }
 
+    /* SIDEBAR FIX */
     #sidebar {
-      width: 250px;
+      width: 280px;
       height: 100vh;
+      flex-shrink: 0;
       border-right: 1px solid #ccc;
+      overflow: hidden;
     }
 
     #sidebar object {
       width: 100%;
-      height: 100vh;
+      height: 100%;
+      display: block;
       border: none;
     }
 
+    /* CHAT AREA */
     #chat-container {
       flex: 1;
       display: flex;
@@ -33,56 +38,83 @@
       height: 100vh;
       padding: 20px;
       box-sizing: border-box;
+      position: relative;
     }
 
     #chat-log {
       flex: 1;
       overflow-y: auto;
-      border: 1px solid #ccc;
-      border-radius: 8px;
       background-color: white;
+      border-radius: 8px;
       padding: 15px;
-      margin-bottom: 10px;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 20px;
+    }
+
+    .chat-message {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      position: relative;
+    }
+
+    .timestamp {
+      font-size: 11px;
+      background-color: #b3d9ff;
+      color: #003366;
+      padding: 4px 8px;
+      border-radius: 999px;
+      align-self: flex-end;
+      margin-bottom: 3px;
     }
 
     .chat-bubble {
       max-width: 70%;
       background-color: #d0e8ff;
-      padding: 10px 15px;
-      border-radius: 18px;
-      align-self: flex-start;
+      padding: 12px 16px;
+      border-radius: 20px;
       word-wrap: break-word;
-      box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.05);
+      font-size: 15px;
     }
 
+    /* CHAT INPUT FIXED TO CORNER */
     #chat-input {
+      position: absolute;
+      bottom: 20px;
+      right: 20px;
       display: flex;
+      width: 350px;
+      background-color: white;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     }
 
     #chat-input input {
       flex: 1;
       padding: 10px;
-      font-size: 16px;
-      border-radius: 8px 0 0 8px;
-      border: 1px solid #ccc;
+      font-size: 15px;
+      border: none;
+      outline: none;
     }
 
     #chat-input button {
       padding: 10px 20px;
-      font-size: 16px;
+      font-size: 15px;
       border: none;
       background-color: #4da6ff;
       color: white;
-      border-radius: 0 8px 8px 0;
       cursor: pointer;
+      transition: background-color 0.2s ease;
     }
 
     #chat-input button:hover {
       background-color: #3399ff;
     }
+
   </style>
 </head>
 <body>
@@ -92,11 +124,12 @@
   </div>
 
   <div id="chat-container">
-    <div id="chat-log">
-      <!-- Chat bubbles go here -->
+    <div id="chat-log" id="log">
+      <!-- Messages will show here -->
     </div>
+
     <div id="chat-input">
-      <input type="text" id="message" placeholder="Type a message..."/>
+      <input type="text" id="message" placeholder="Type a message..." />
       <button onclick="sendMessage()">Send</button>
     </div>
   </div>
@@ -107,11 +140,25 @@
       const message = input.value.trim();
       if (message === '') return;
 
+      const now = new Date();
+      const timeStr = now.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
+
       const log = document.getElementById('chat-log');
+
+      const wrapper = document.createElement('div');
+      wrapper.className = 'chat-message';
+
+      const timestamp = document.createElement('div');
+      timestamp.className = 'timestamp';
+      timestamp.textContent = timeStr;
+
       const bubble = document.createElement('div');
       bubble.className = 'chat-bubble';
       bubble.textContent = message;
-      log.appendChild(bubble);
+
+      wrapper.appendChild(timestamp);
+      wrapper.appendChild(bubble);
+      log.appendChild(wrapper);
 
       input.value = '';
       log.scrollTop = log.scrollHeight;
