--- a/info.html
+++ b/info.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Info Cards</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       display: flex;
-      font-family: Arial, sans-serif;
+      font-family: 'Quicksand', sans-serif;
       background-color: #e6f2ff;
       height: 100vh;
       overflow: hidden;
@@ -79,18 +80,34 @@
       cursor: pointer;
     }
 
-    .user-card {
+    #user-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      gap: 20px;
       margin-top: 20px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
+    }
+
+    .user-card {
+      border-radius: 12px;
       background-color: white;
       padding: 15px;
-      width: 300px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s;
+    }
+
+    .user-card:hover {
+      transform: scale(1.02);
     }
 
     .user-card summary {
       font-weight: bold;
       cursor: pointer;
+      background-color: #d0e8ff;
+      padding: 10px 14px;
+      border-radius: 999px;
+      text-align: center;
+      list-style: none;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
     }
 
     .user-info {
