--- a/intro.html
+++ b/intro.html
@@ -78,8 +78,10 @@
 
     <div id="slideshow">
       <iframe 
-        src="https://docs.google.com/presentation/d/e/1pLeU59VIEQrJxZwDuHPEkuGEHIKyLAUl/embed?start=false&loop=false&delayms=3000" 
-        allowfullscreen="true">
+        src="https://docs.google.com/presentation/d/e/2PACX-1vSEQGdezgf3MopygrQKaHvu0d2PV7rMNJ9ZEnzzWbJft9JNLYaCUWkWQtaLqrjFSw/pubembed?start=false&loop=false&delayms=3000" 
+        allowfullscreen="true" 
+        mozallowfullscreen="true" 
+        webkitallowfullscreen="true">
       </iframe>
     </div>
   </div>
