--- a/sidebar.html
+++ b/sidebar.html
@@ -109,10 +109,10 @@
           <span class="emoji" aria-hidden="true">📝</span> <span>Writing Feedback</span>
         </a>
         <a class="item" href="tools.html" target="_parent">
-          <span class="emoji" aria-hidden="true">🛠️</span> <span>Tools</span>
+          <span class="emoji" aria-hidden="true">🛠️</span> <span>Templates</span>
         </a>
         <a class="item" href="features.html" target="_parent">
-          <span class="emoji" aria-hidden="true">✨</span> <span>Features</span>
+          <span class="emoji" aria-hidden="true">✨</span> <span>Charecter Names</span>
         </a>
       </nav>
 
