--- a/all-templates.html
+++ b/all-templates.html
@@ -42,34 +42,37 @@
 
     /* Main Content */
     .main {
-      margin-left: 320px;
-      padding: 2rem;
+      margin-left: 320px;           /* sit right next to the sidebar */
+      padding: 1.25rem 1.5rem;      /* smaller padding = less gap */
       flex: 1;
+      min-width: 0;                 /* prevents shrinking that kills grid columns */
     }
+
     .header {
       text-align: center;
       padding: 20px 0;
       background: var(--accent);
       color: #fff;
       border-radius: 6px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
-    .header h1 { 
-      font-size: 2.5rem; 
-      margin: 0; 
+    .header h1 {
+      font-size: 2.5rem;
+      margin: 0;
       font-family: 'Playfair Display', serif;
     }
     .header p { font-size: 1.2rem; margin-top: 10px; }
 
+    /* Force container to use ALL available width (overrides any global .container rules) */
     .container {
       background: var(--container-bg);
-      padding: 30px;
+      padding: 24px;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 
-      width: 100%;       /* ✅ fills whole space */
-      max-width: 100%;   /* ✅ no centering constraint */
-      margin: 0;         /* ✅ removes auto margin gaps */
+      width: 100% !important;       /* <-- full width */
+      max-width: 100% !important;   /* <-- no “boxed/centered” layout */
+      margin: 0 !important;         /* <-- no auto margins */
       box-sizing: border-box;
     }
 
@@ -77,7 +80,8 @@
     .tabs {
       display: flex;
       border-bottom: 2px solid var(--border);
-      margin-bottom: 25px;
+      margin-bottom: 20px;
+      overflow-x: auto;
     }
     .tab-link {
       padding: 12px 24px;
@@ -90,6 +94,7 @@
       transition: background 0.3s, box-shadow 0.3s;
       font-size: 16px;
       font-weight: 500;
+      white-space: nowrap;
     }
     .tab-link:hover { background: #dce3ea; }
     .tab-link.active {
@@ -101,28 +106,32 @@
     /* Templates Grid */
     .templates-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* flexible, fills width */
       gap: 20px;
-      width: 100%;        /* ✅ full width */
+      width: 100%;
     }
+
     .template-card {
       border: 1px solid var(--border);
       background: #fdfdfd;
       padding: 20px;
-      border-radius: 6px;
-      transition: background 0.3s, box-shadow 0.3s;
+      border-radius: 10px;
+      transition: background 0.3s, box-shadow 0.3s, transform 0.12s;
       cursor: pointer;
-      min-height: 120px; /* long rectangle */
+
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
+      height: 100%;
+      min-height: 150px;
     }
     .template-card:hover {
       background: #f0f4f8;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
+      transform: translateY(-2px);
     }
-    .template-card h3 { font-size: 1.2rem; margin-bottom: 8px; }
-    .template-card p { font-size: 0.95rem; color: var(--muted); }
+    .template-card h3 { font-size: 1.2rem; margin-bottom: 10px; }
+    .template-card p { font-size: 0.98rem; color: var(--muted); }
   </style>
 </head>
 <body>
@@ -137,12 +146,14 @@
       <h1>All Templates</h1>
       <p>Your complete toolkit for crafting brilliant narratives</p>
     </div>
+
     <div class="container">
       <!-- Top Tabs -->
       <div class="tabs" id="tabsContainer">
         <button class="tab-link" id="myTemplatesTab">My Templates</button>
         <button class="tab-link active" id="allTemplatesTab">All Templates</button>
       </div>
+
       <!-- Tab Content Area -->
       <div id="tabContent">
         <div id="allTemplatesContent">
@@ -157,75 +168,35 @@
   <script>
     // Pre-made Templates Data
     const preMadeTemplates = [
-      {
-        id: "bookMasterOutline",
-        title: "Book Master Outline Template",
-        description: "A comprehensive outline for novels with bonus plot framework options."
-      },
-      {
-        id: "ultimateCharacterTemplate",
-        title: "Ultimate Character Template",
-        description: "A detailed template covering basic info, psych profile, and relational dynamics."
-      },
-      {
-        id: "magicTechSystemTemplate",
-        title: "Magic/Technology System Template",
-        description: "Outline for designing a magic or tech system with rules, limits, and cultural significance."
-      },
-      {
-        id: "worldbuildingMasterTemplate",
-        title: "Worldbuilding Master Template",
-        description: "A template for building a rich world with detailed setting, culture, and key locations."
-      },
-      {
-        id: "chapterPlanningTemplate",
-        title: "Chapter Planning Template (Expanded)",
-        description: "An expanded template for detailed chapter planning."
-      },
-      {
-        id: "scenePlanningTemplate",
-        title: "Scene Planning Template (Drill-down)",
-        description: "A drill-down template for planning individual scenes in detail."
-      },
-      {
-        id: "themeSymbolismMap",
-        title: "Theme & Symbolism Map",
-        description: "A grid template to map themes and symbolism across your narrative."
-      },
-      {
-        id: "foreshadowingTracker",
-        title: "Foreshadowing Tracker",
-        description: "A tracker for managing setup and payoff of foreshadowing elements."
-      },
-      {
-        id: "revisionChecklistTemplate",
-        title: "Revision Checklist Template",
-        description: "A comprehensive checklist to ensure consistency and quality in your manuscript."
-      },
-      {
-        id: "shortStoryOutlineTemplate",
-        title: "Short Story Outline Template",
-        description: "An outline template designed specifically for short stories."
-      }
+      { id: "bookMasterOutline",        title: "Book Master Outline Template",        description: "A comprehensive outline for novels with bonus plot framework options." },
+      { id: "ultimateCharacterTemplate", title: "Ultimate Character Template",         description: "A detailed template covering basic info, psych profile, and relational dynamics." },
+      { id: "magicTechSystemTemplate",   title: "Magic/Technology System Template",    description: "Outline for designing a magic or tech system with rules, limits, and cultural significance." },
+      { id: "worldbuildingMasterTemplate", title: "Worldbuilding Master Template",     description: "A template for building a rich world with detailed setting, culture, and key locations." },
+      { id: "chapterPlanningTemplate",   title: "Chapter Planning Template (Expanded)", description: "An expanded template for detailed chapter planning." },
+      { id: "scenePlanningTemplate",     title: "Scene Planning Template (Drill-down)", description: "A drill-down template for planning individual scenes in detail." },
+      { id: "themeSymbolismMap",         title: "Theme & Symbolism Map",               description: "A grid template to map themes and symbolism across your narrative." },
+      { id: "foreshadowingTracker",      title: "Foreshadowing Tracker",               description: "A tracker for managing setup and payoff of foreshadowing elements." },
+      { id: "revisionChecklistTemplate", title: "Revision Checklist Template",         description: "A comprehensive checklist to ensure consistency and quality in your manuscript." },
+      { id: "shortStoryOutlineTemplate", title: "Short Story Outline Template",        description: "An outline template designed specifically for short stories." }
     ];
 
     // Render templates
     function renderTemplates() {
       const grid = document.getElementById('templatesGrid');
       grid.innerHTML = '';
-      preMadeTemplates.forEach(template => {
+      preMadeTemplates.forEach(t => {
         const card = document.createElement('div');
         card.className = 'template-card';
-        card.innerHTML = `<h3>${template.title}</h3><p>${template.description}</p>`;
+        card.innerHTML = `<h3>${t.title}</h3><p>${t.description}</p>`;
         card.addEventListener('click', () => {
-          window.location.href = `template-view.html?template=${encodeURIComponent(template.id)}`;
+          window.location.href = `template-view.html?template=${encodeURIComponent(t.id)}`;
         });
         grid.appendChild(card);
       });
     }
     renderTemplates();
 
-    // Tab switching
+    // Tabs
     document.getElementById('myTemplatesTab').addEventListener('click', () => {
       window.location.href = 'story-templates.html';
     });
