--- a/all-templates.html
+++ b/all-templates.html
@@ -5,7 +5,7 @@
   <script src="role-guard.js"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Team Writers - All Templates</title>
+  <title>Teen Writers - All Templates</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -15,6 +15,7 @@
       --accent: #A3C4DC; /* Haze Blue */
       --white: #ffffff;
       --border: #e0e0e0;
+      --sidebar-bg: #111;
       --container-bg: #ffffff;
     }
     * { box-sizing: border-box; margin: 0; padding: 0; }
@@ -24,64 +25,70 @@
       color: var(--text);
       display: flex;
     }
-
     /* Sidebar */
-    #sidebar {
-      width: 320px;
+    .sidebar {
+      width: 300px;
+      background: var(--sidebar-bg);
+      color: #fff;
+      padding: 2rem 1.5rem;
       height: 100vh;
-      flex-shrink: 0;
-      border-right: 1px solid #ccc;
-      overflow: hidden;
+      position: fixed;
+      overflow-y: auto;
     }
-    #sidebar object {
-      width: 100%;
-      height: 100%;
+    .sidebar h2 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.8rem;
+      margin-bottom: 2rem;
+      font-weight: 600;
+    }
+    .sidebar .section { margin-bottom: 2rem; }
+    .section-title {
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      letter-spacing: 0.06em;
+      color: #aaa;
+      margin-bottom: 0.6rem;
+      font-weight: 600;
+    }
+    .nav-link {
       display: block;
-      border: none;
+      margin: 0.5rem 0;
+      color: #e0e0e0;
+      text-decoration: none;
+      font-size: 1rem;
+      padding: 0.4rem 0.6rem;
+      border-radius: 4px;
+      font-weight: 500;
+      transition: background 0.2s;
     }
-
+    .nav-link:hover { background-color: #1e1e1e; }
     /* Main Content */
     .main {
-      margin-left: 320px;           /* sit right next to the sidebar */
-      padding: 1.25rem 1.5rem;      /* smaller padding = less gap */
+      margin-left: 300px;
+      padding: 2.5rem;
       flex: 1;
-      min-width: 0;                 /* prevents shrinking that kills grid columns */
     }
-
     .header {
       text-align: center;
       padding: 20px 0;
       background: var(--accent);
       color: #fff;
       border-radius: 6px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
-    .header h1 {
-      font-size: 2.5rem;
-      margin: 0;
-      font-family: 'Playfair Display', serif;
-    }
+    .header h1 { font-size: 2.5rem; margin: 0; }
     .header p { font-size: 1.2rem; margin-top: 10px; }
-
-    /* Force container to use ALL available width (overrides any global .container rules) */
     .container {
       background: var(--container-bg);
-      padding: 24px;
+      padding: 30px;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-
-      width: 100% !important;       /* <-- full width */
-      max-width: 100% !important;   /* <-- no “boxed/centered” layout */
-      margin: 0 !important;         /* <-- no auto margins */
-      box-sizing: border-box;
     }
-
     /* Top Tabs */
     .tabs {
       display: flex;
       border-bottom: 2px solid var(--border);
-      margin-bottom: 20px;
-      overflow-x: auto;
+      margin-bottom: 25px;
     }
     .tab-link {
       padding: 12px 24px;
@@ -94,7 +101,6 @@
       transition: background 0.3s, box-shadow 0.3s;
       font-size: 16px;
       font-weight: 500;
-      white-space: nowrap;
     }
     .tab-link:hover { background: #dce3ea; }
     .tab-link.active {
@@ -102,42 +108,64 @@
       border-bottom: 3px solid var(--accent);
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
     /* Templates Grid */
     .templates-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* flexible, fills width */
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
       gap: 20px;
-      width: 100%;
     }
-
     .template-card {
       border: 1px solid var(--border);
       background: #fdfdfd;
       padding: 20px;
-      border-radius: 10px;
-      transition: background 0.3s, box-shadow 0.3s, transform 0.12s;
+      border-radius: 6px;
+      transition: background 0.3s, box-shadow 0.3s;
       cursor: pointer;
-
+      min-height: 120px; /* long rectangle */
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      height: 100%;
-      min-height: 150px;
+      justify-content: center;
     }
     .template-card:hover {
       background: #f0f4f8;
       box-shadow: 0 3px 8px rgba(0,0,0,0.08);
-      transform: translateY(-2px);
     }
-    .template-card h3 { font-size: 1.2rem; margin-bottom: 10px; }
-    .template-card p { font-size: 0.98rem; color: var(--muted); }
+    .template-card h3 { font-size: 1.2rem; margin-bottom: 8px; }
+    .template-card p { font-size: 0.95rem; color: var(--muted); }
   </style>
 </head>
 <body>
   <!-- Sidebar -->
-  <div id="sidebar">
-    <object type="text/html" data="sidebar.html"></object>
+  <div class="sidebar">
+    <h2>Teen Writers</h2>
+    <div class="section">
+      <div class="section-title">Core</div>
+      <a href="author-dashboard.html" class="nav-link">🏠 Dashboard</a>
+      <a href="earnings.html" class="nav-link">💰 Earnings 🚧</a>
+    </div>
+    <div class="section">
+      <div class="section-title">Writing Tools</div>
+      <a href="blurb-generator.html" class="nav-link">🧠 Blurb Generator 🚧</a>
+      <a href="grammar.html" class="nav-link">📝 Grammar Fixer 🚧</a>
+      <a href="story-templates.html" class="nav-link">📄 Story Templates</a>
+      <a href="formatting.tools.html" class="nav-link">📈 Graphing Plots 🚧</a>
+      <a href="genre-tags.html" class="nav-link">🏷️ Genre & Tags</a>
+    </div>
+    <div class="section">
+      <div class="section-title">Testing & Feedback</div>
+      <a href="A-B.html" class="nav-link">🧪 A/B Testing 🚧</a>
+      <a href="reader-heatmap.html" class="nav-link">🔥 Reader Heatmap 🚧</a>
+    </div>
+    <div class="section">
+      <div class="section-title">Publishing</div>
+      <a href="checklist.html" class="nav-link">✅ Checklist</a>
+      <a href="cover-generator.html" class="nav-link">🖼️ Cover Generator 🚧</a>
+    </div>
+    <div class="section">
+      <div class="section-title">Productivity</div>
+      <a href="inkie-chat.html" class="nav-link">💬 Writer Chat 🚧</a>
+      <a href="settings-author.html" class="nav-link">⚙️ Settings</a>
+    </div>
   </div>
 
   <!-- Main Content -->
@@ -146,14 +174,12 @@
       <h1>All Templates</h1>
       <p>Your complete toolkit for crafting brilliant narratives</p>
     </div>
-
     <div class="container">
       <!-- Top Tabs -->
       <div class="tabs" id="tabsContainer">
         <button class="tab-link" id="myTemplatesTab">My Templates</button>
         <button class="tab-link active" id="allTemplatesTab">All Templates</button>
       </div>
-
       <!-- Tab Content Area -->
       <div id="tabContent">
         <div id="allTemplatesContent">
@@ -168,35 +194,75 @@
   <script>
     // Pre-made Templates Data
     const preMadeTemplates = [
-      { id: "bookMasterOutline",        title: "Book Master Outline Template",        description: "A comprehensive outline for novels with bonus plot framework options." },
-      { id: "ultimateCharacterTemplate", title: "Ultimate Character Template",         description: "A detailed template covering basic info, psych profile, and relational dynamics." },
-      { id: "magicTechSystemTemplate",   title: "Magic/Technology System Template",    description: "Outline for designing a magic or tech system with rules, limits, and cultural significance." },
-      { id: "worldbuildingMasterTemplate", title: "Worldbuilding Master Template",     description: "A template for building a rich world with detailed setting, culture, and key locations." },
-      { id: "chapterPlanningTemplate",   title: "Chapter Planning Template (Expanded)", description: "An expanded template for detailed chapter planning." },
-      { id: "scenePlanningTemplate",     title: "Scene Planning Template (Drill-down)", description: "A drill-down template for planning individual scenes in detail." },
-      { id: "themeSymbolismMap",         title: "Theme & Symbolism Map",               description: "A grid template to map themes and symbolism across your narrative." },
-      { id: "foreshadowingTracker",      title: "Foreshadowing Tracker",               description: "A tracker for managing setup and payoff of foreshadowing elements." },
-      { id: "revisionChecklistTemplate", title: "Revision Checklist Template",         description: "A comprehensive checklist to ensure consistency and quality in your manuscript." },
-      { id: "shortStoryOutlineTemplate", title: "Short Story Outline Template",        description: "An outline template designed specifically for short stories." }
+      {
+        id: "bookMasterOutline",
+        title: "Book Master Outline Template",
+        description: "A comprehensive outline for novels with bonus plot framework options."
+      },
+      {
+        id: "ultimateCharacterTemplate",
+        title: "Ultimate Character Template",
+        description: "A detailed template covering basic info, psych profile, and relational dynamics."
+      },
+      {
+        id: "magicTechSystemTemplate",
+        title: "Magic/Technology System Template",
+        description: "Outline for designing a magic or tech system with rules, limits, and cultural significance."
+      },
+      {
+        id: "worldbuildingMasterTemplate",
+        title: "Worldbuilding Master Template",
+        description: "A template for building a rich world with detailed setting, culture, and key locations."
+      },
+      {
+        id: "chapterPlanningTemplate",
+        title: "Chapter Planning Template (Expanded)",
+        description: "An expanded template for detailed chapter planning."
+      },
+      {
+        id: "scenePlanningTemplate",
+        title: "Scene Planning Template (Drill-down)",
+        description: "A drill-down template for planning individual scenes in detail."
+      },
+      {
+        id: "themeSymbolismMap",
+        title: "Theme & Symbolism Map",
+        description: "A grid template to map themes and symbolism across your narrative."
+      },
+      {
+        id: "foreshadowingTracker",
+        title: "Foreshadowing Tracker",
+        description: "A tracker for managing setup and payoff of foreshadowing elements."
+      },
+      {
+        id: "revisionChecklistTemplate",
+        title: "Revision Checklist Template",
+        description: "A comprehensive checklist to ensure consistency and quality in your manuscript."
+      },
+      {
+        id: "shortStoryOutlineTemplate",
+        title: "Short Story Outline Template",
+        description: "An outline template designed specifically for short stories."
+      }
     ];
 
     // Render templates
     function renderTemplates() {
       const grid = document.getElementById('templatesGrid');
       grid.innerHTML = '';
-      preMadeTemplates.forEach(t => {
+      preMadeTemplates.forEach(template => {
         const card = document.createElement('div');
         card.className = 'template-card';
-        card.innerHTML = `<h3>${t.title}</h3><p>${t.description}</p>`;
+        card.innerHTML = `<h3>${template.title}</h3><p>${template.description}</p>`;
         card.addEventListener('click', () => {
-          window.location.href = `template-view.html?template=${encodeURIComponent(t.id)}`;
+          window.location.href = `template-view.html?template=${encodeURIComponent(template.id)}`;
         });
         grid.appendChild(card);
       });
     }
     renderTemplates();
 
-    // Tabs
+    // Tab switching
     document.getElementById('myTemplatesTab').addEventListener('click', () => {
       window.location.href = 'story-templates.html';
     });
