--- a/new-template.html
+++ b/new-template.html
@@ -17,23 +17,26 @@
       --border: #e0e0e0;
       --container-bg: #ffffff;
     }
-    * { box-sizing: border-box; }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      margin: 0;
       font-family: 'Poppins', sans-serif;
       background-color: var(--bg);
       color: var(--text);
       display: flex;
     }
 
-    /* Embedded sidebar */
+    /* ✅ Fixed Sidebar */
     #sidebar {
       width: 320px;
-      height: 100vh;
-      flex-shrink: 0;
+      position: fixed;
+      left: 0;
+      top: 0;
+      bottom: 0;
       border-right: 1px solid #ccc;
+      background: #111;
       overflow: hidden;
+      z-index: 10;
     }
     #sidebar object {
       width: 100%;
@@ -42,10 +45,12 @@
       border: none;
     }
 
+    /* Main Content sits flush next to sidebar */
     .main {
       margin-left: 320px;
-      padding: 2.5rem;
+      padding: 2rem;
       flex: 1;
+      min-width: 0;
     }
 
     .header {
@@ -54,31 +59,33 @@
       background: var(--accent);
       color: #fff;
       border-radius: 6px;
-      margin-bottom: 30px;
+      margin-bottom: 24px;
     }
     .header h1 {
-      font-size: 2.5rem;
+      font-size: 2.3rem;
       margin: 0;
       font-family: 'Playfair Display', serif;
     }
-    .header p { font-size: 1.2rem; margin-top: 10px; }
+    .header p { font-size: 1.1rem; margin-top: 8px; }
 
     .tabs {
       display: flex;
       border-bottom: 2px solid var(--border);
-      margin-bottom: 25px;
+      margin-bottom: 20px;
+      overflow-x: auto;
     }
     .tab-link {
-      padding: 12px 24px;
+      padding: 10px 18px;
       background: #e9edf1;
       margin-right: 8px;
       border-top-left-radius: 6px;
       border-top-right-radius: 6px;
-      font-size: 16px;
+      font-size: 15px;
       font-weight: 500;
       text-decoration: none;
       color: inherit;
-      transition: background 0.3s, box-shadow 0.3s;
+      transition: background 0.25s, box-shadow 0.25s;
+      white-space: nowrap;
     }
     .tab-link:hover { background: #dce3ea; }
     .tab-link.active {
@@ -89,7 +96,7 @@
 
     .container {
       background: var(--container-bg);
-      padding: 30px;
+      padding: 24px;
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
@@ -97,27 +104,28 @@
     label {
       font-weight: 600;
       display: block;
-      margin-top: 1.5rem;
+      margin-top: 1.2rem;
     }
     input, textarea {
       width: 100%;
-      padding: 0.8rem;
+      padding: 0.75rem;
       font-size: 1rem;
-      margin-top: 0.5rem;
+      margin-top: 0.4rem;
       border: 1px solid #ccc;
       border-radius: 4px;
     }
-    textarea { height: 300px; resize: vertical; }
+    textarea { height: 280px; resize: vertical; }
 
     .btn {
-      margin-top: 1.5rem;
+      margin-top: 1.2rem;
       background-color: var(--accent);
       color: white;
-      padding: 0.8rem 1.5rem;
+      padding: 0.75rem 1.4rem;
       font-size: 1rem;
       border: none;
       border-radius: 4px;
       cursor: pointer;
+      transition: background 0.2s;
     }
     .btn:hover { background-color: #7aa7d1; }
 
@@ -187,9 +195,7 @@
     const auth = firebase.auth();
 
     let currentUser = null;
-    auth.onAuthStateChanged(user => {
-      if (user) currentUser = user;
-    });
+    auth.onAuthStateChanged(user => { if (user) currentUser = user; });
 
     function saveTemplate() {
       const title = document.getElementById("templateTitle").value.trim();
