--- a/new-template.html
+++ b/new-template.html
@@ -157,7 +157,7 @@
 
     <div class="container">
       <div class="tabs">
-        <a href="story-templates.html" class="tab-link">My Templates</a>
+        <a href="tools.html" class="tab-link">My Templates</a>
         <a href="all-templates.html" class="tab-link">All Templates</a>
         <button class="tab-link active">New Template</button>
       </div>
